# embenx

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  benchmark.py  benchmark_report.md  cli.py  core.py  data.py  explorer.py  idea.md  llm.py  mcp_server.py  publish.sh  pyproject.toml  requirements.txt  rerank.py  test_mcp.parquet
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
.planning/debug/: hit-missing-lines-100-coverage.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: .buildinfo  benchmark.html  cli.html  data.html  index.html  indexers.base.html  indexers.chroma_indexer.html  indexers.faiss_indexer.html  indexers.html  indexers.lance_indexer.html  indexers.milvus_indexer.html  indexers.qdrant_indexer.html  llm.html  objects.inv  searchindex.js
docs/.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  usage.doctree
docs/_modules/: benchmark.html  data.html  index.html  indexers.html  llm.html
docs/_modules/indexers/: base.html  chroma_indexer.html  duckdb_indexer.html  faiss_indexer.html  lance_indexer.html  (+3 more)
docs/_sources/: api.rst.txt  index.rst.txt
docs_src/: advanced.rst  api.rst  cli.rst  conf.py  index.rst  usage.rst  visual.rst
evals/: evals.json
examples/: advanced_reranking.py  agentic_self_healing.py  ann_libraries.py  batch_insertion.py  cluster_kv_optimization.py  complex_indexers.py  custom_indexer.py  db_indexers.py  echo_temporal_memory.py  faiss_variants.py  filtering_reranking.py  hybrid_search.py  kv_cache_augmented.py  library_benchmark.py  managed_sessions.py  matryoshka_search.py  multimodal_retrieval.py  numpy_interop.py  ollama_benchmark.sh  opensearch_indexing.py  parquet_benchmark.sh  production_export.py  recall_evaluation.py  seed_explorer_data.py  seed_real_data.py  spatial_cognitive_memory.py  ssm_hydration.py  synthetic_data_generation.py  trajectory_search.py  turbo_quant_caching.py  usearch_quantization.py
indexers/: __init__.py  annoy_indexer.py  base.py  bm25_indexer.py  chroma_indexer.py  duckdb_indexer.py  elasticsearch_indexer.py  faiss_indexer.py  hnswlib_indexer.py  lance_indexer.py  milvus_indexer.py  opensearch_indexer.py  pgvector_indexer.py  qdrant_indexer.py  scann_indexer.py  simple_indexer.py  usearch_indexer.py  vespa_indexer.py  weaviate_indexer.py
tests/: test_absolute_final_100.py  test_batch_insert.py  test_benchmark.py  test_cli.py  test_complex_indexers.py  test_core.py  test_coverage_edge_cases.py  test_coverage_final.py  test_coverage_gap_filler.py  test_data.py  test_explorer.py  test_hybrid.py  test_indexers.py  test_llm.py  test_milestone_4.py  test_milestone_5.py  test_more_indexers.py  test_multimodal.py  test_opensearch.py  test_weaviate.py
