[project]
name = "embenx"
version = "0.1.0"
description = "A minimal, ultra-fast, and flexible CLI for benchmarking vector indexing libraries."
authors = [{ name = "adityak74", email = "adityakarnam@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.0.0",
    "typer>=0.9.0",
    "rich>=10.11.0",
    "datasets>=2.14.0",
    "psutil>=5.9.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "qdrant-client>=1.5.0",
    "pymilvus>=2.3.0",
    "lancedb>=0.2.0",
    "pyarrow>=12.0.0",
]

[project.scripts]
embenx = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
