[project]
name = "embenx"
version = "0.0.1"
description = "A minimal, ultra-fast, and flexible CLI for benchmarking vector indexing libraries."
authors = [{ name = "adityak74", email = "adityakarnam@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.0.0",
    "typer>=0.9.0",
    "rich>=10.11.0",
    "datasets>=2.14.0",
    "psutil>=5.9.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "qdrant-client>=1.5.0",
    "pymilvus>=2.3.0",
    "lancedb>=0.2.0",
    "pyarrow>=12.0.0",
    "weaviate-client>=4.5.4",
    "duckdb>=1.0.0",
    "usearch>=2.9.0",
    "annoy>=1.17.0",
    "hnswlib>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.hatch.build]
include = [
    "*.py",
    "indexers/*.py",
    "README.md",
    "SKILL.md"
]

[project.scripts]
embenx = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "build>=1.4.2",
    "bump-my-version>=1.3.0",
    "furo>=2025.12.19",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "sphinx>=7.4.7",
    "twine>=6.2.0",
]
